6253
Also, the loop it is entering is trying to print the error message for not having found the implicit argument to flatten.  There's a whole other bug here:
{code}
scala> ((for (x <- (1 to 10)) yield { if (x % 2 == 0) List(x).seq else List(x).par }): GenSeq[GenSeq[_]]).flatten
<console>:9: error: No implicit view available from scala.collection.GenSeq[_] => scala.collection.TraversableOnce[B].
              ((for (x <- (1 to 10)) yield { if (x % 2 == 0) List(x).seq else List(x).par }): GenSeq[GenSeq[_]]).flatten
                                                                                                                 ^
{code}

1) "TraversableOnce[B]" shouldn't appear in an error message.  B is type parameter.
2) In theory at least it should compile.
